--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.2"
+compiler = "4.16.0"
 firebaseBom = "33.5.1"
 glide = "4.16.0"
 junit = "4.13.2"
@@ -16,6 +17,7 @@ firebaseStorage = "21.0.1"
 recyclerview = "1.3.2"
 
 [libraries]
+compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
